--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+{% load staticfiles %} <!-- New line -->
+
 <html>
     <head>
         <title>Rango</title>
@@ -12,6 +14,8 @@
         </div>
         <div>
             <a href="/rango/about/">About</a><br />
+            <img src="{% static 'images/park.jpg' %}"
+                alt="Picture of Kelvingrove Park" /> <!-- New line -->
         </div>
     </body>
 
