--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,16 +10,13 @@
     <body>
         <h1>Rango says...</h1>
         <div>here is the about page.<br />
-            <strong> This tutorial has been put
-                together by Sarry Teng </strong><br />
+            <strong> This tutorial has been put together by Sarry Teng. </strong><br />
         </div>
         <div>
             <a href="/rango/">Index</a><br />
-            <img src="{% static 'images/rango.jpg' %}"
-                alt="Picture of Kelvingrove Park" /> <!-- New line -->
+            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
 
-            <img src="/media/cat.jpg"
-                alt="Picture of a Cat" /> <!-- New line -->
+            <img src="/media/cat.jpg" alt="Picture of a Cat." /> <!-- New line -->
         </div>
     </body>
 
