--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -12,6 +12,22 @@
         <div>hey there partner! <br />
             <strong>{{ boldmessage }}</strong><br />
         </div>
+
+        <div>
+            {% if categories %}
+                <ul>
+                {% for category in categories %}
+                    <li>
+                        <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+                    </li>
+                {% endfor %}
+                </ul>
+
+            {% else %}
+                <strong>There are no categories present.</strong>
+            {% endif %}
+        </div>
+        
         <div>
             <a href="/rango/about/">About</a><br />
             <img src="{% static 'images/rango.jpg' %}"
