--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -7,6 +7,8 @@
     </head>
 
     <body>
+        <a href="/rango/">Index</a>
+
         <div>
         {% if category %}
             <h1>{{ category.name }}</h1>
