--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -14,12 +14,11 @@
         </div>
 
         <div>
+            <h2>Most Liked Categories</h2>
             {% if categories %}
                 <ul>
                 {% for category in categories %}
-                    <li>
-                        <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
-                    </li>
+                    <li><a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a></li>
                 {% endfor %}
                 </ul>
 
@@ -29,9 +28,22 @@
         </div>
         
         <div>
+            <h2>Most Viewed Pages</h2>
+            {% if pages %}
+                <ul>
+                {% for page in pages %}
+                    <li><a href="{{ page.url }}/">{{ page.title }}</a></li>
+                {% endfor %}
+                </ul>
+
+            {% else %}
+                <strong>There are no pages present.</strong>
+            {% endif %}
+        </div>
+
+        <div>
             <a href="/rango/about/">About</a><br />
-            <img src="{% static 'images/rango.jpg' %}"
-                alt="Picture of Kelvingrove Park" /> <!-- New line -->
+            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
         </div>
     </body>
 
