exercise 6 - done, no issues!

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -32,7 +32,7 @@
             {% if pages %}
                 <ul>
                 {% for page in pages %}
-                    <li><a href="{{ page.url }}/">{{ page.title }}</a></li>
+                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
                 {% endfor %}
                 </ul>
 
