--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -6,9 +6,9 @@
     </head>
 
     <body>
-        <h1>Add a Category</h1>
+        <h1>Add a Page to {{ category.name }}</h1>
         <div>
-            <form id = "category_form" method="post" action="/rango/add_category/">
+            <form id = "add_page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
                 {% csrf_token %}
                 {% for hidden in form.hidden_fields %}
                     {{ hidden }}
@@ -19,7 +19,7 @@
                     {{ field.help_text }}
                     {{ field }}
                 {% endfor %}
-                <input type="submit" name="submit" value="Create Category" />
+                <input type= "submit" name = "submit" value = "Add Page"/>
 
             </form>
             
