--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -24,6 +24,8 @@
             <strong>No pages currently in category.</strong>
             {% endif %}
 
+            <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br/>
+
         {% else %}
             The specified category does not exist.
         {% endif %}
