--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,30 +1,27 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% block title_block %} 
+    Add a Category
+{% endblock %}
 
-    <body>
-        <h1>Add a Category</h1>
-        <div>
-            <form id = "category_form" method="post" action="/rango/add_category/">
-                {% csrf_token %}
-                {% for hidden in form.hidden_fields %}
-                    {{ hidden }}
-                {% endfor %}
+{% block body_block %}
+    <h1>Add a Category</h1>
+    <div>
+        <form id = "category_form" method="post" action="{% url 'rango:add_category' %}">
+            {% csrf_token %}
+            {% for hidden in form.hidden_fields %}
+                {{ hidden }}
+            {% endfor %}
 
-                {% for field in form.visible_fields %}
-                    {{ field.errors }}
-                    {{ field.help_text }}
-                    {{ field }}
-                {% endfor %}
-                <input type="submit" name="submit" value="Create Category" />
+            {% for field in form.visible_fields %}
+                {{ field.errors }}
+                {{ field.help_text }}
+                {{ field }}
+            {% endfor %}
+            <input type="submit" name="submit" value="Create Category" />
 
-            </form>
-            
-        </div>
-    </body>
+        </form>
+        
+    </div>
 
-
-</html>
+{% endblock %}
