--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,52 +1,49 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-{% load staticfiles %} <!-- New line -->
+{% block title_block %} 
+    Homepage
+{% endblock %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% block body_block %}
 
-    <body>
-        <h1>Rango says...</h1>
-        <div>hey there partner! <br />
-            <strong>{{ boldmessage }}</strong><br />
-        </div>
+    <h1>Rango says...</h1>
+    <div>hey there partner! <br />
+        <strong>{{ boldmessage }}</strong><br />
+    </div>
 
-        <div>
-            <h2>Most Liked Categories</h2>
-            {% if categories %}
-                <ul>
-                {% for category in categories %}
-                    <li><a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a></li>
-                {% endfor %}
-                </ul>
+    <div>
+        <h2>Most Liked Categories</h2>
+        {% if categories %}
+            <ul>
+            {% for category in categories %}
+                <li>
+                    <a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a>
+                </li>
+            {% endfor %}
+            </ul>
 
-            {% else %}
-                <strong>There are no categories present.</strong>
-            {% endif %}
-        </div>
-        
-        <div>
-            <h2>Most Viewed Pages</h2>
-            {% if pages %}
-                <ul>
-                {% for page in pages %}
-                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                {% endfor %}
-                </ul>
+        {% else %}
+            <strong>There are no categories present.</strong>
+        {% endif %}
+    </div>
+    
+    <div>
+        <h2>Most Viewed Pages</h2>
+        {% if pages %}
+            <ul>
+            {% for page in pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+            </ul>
 
-            {% else %}
-                <strong>There are no pages present.</strong>
-            {% endif %}
-        </div>
+        {% else %}
+            <strong>There are no pages present.</strong>
+        {% endif %}
+    </div>
 
-        <div>
-            <a href="/rango/about/">About</a><br />
-            <a href="/rango/add_category/">Add a New Category</a><br />
-            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
-        </div>
-    </body>
+    <div>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
+    </div>
 
-
-</html>
+{% endblock %}
