--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
+{% load rango_template_tags %}
 
 <html>
     <head lang="en">
@@ -18,7 +19,12 @@
             {% block body_block %}
             {% endblock %}
         </div>
-        
+
+        <div>
+            {% block sidebar_block %}
+                {% get_category_list %}
+            {% endblock %}
+        </div>
         <hr />
         <div>
             <ul>
