--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -27,7 +27,10 @@
     <strong>No pages currently in category.</strong>
     {% endif %}
 
+    {% if user.is_authenticated %}
     <a href="{% url 'rango:add_page' category.slug %}">Add Page</a><br />
+    {% endif %}
+
     {% else %}
     The specified category does not exist.
     {% endif %}
