--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -52,4 +52,6 @@
         <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
     </div>
 
+    <p>Visits: {{ visits }}</p>
+    
 {% endblock %}
