--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -15,5 +15,6 @@
         <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
         <img src="/media/cat.jpg" alt="Picture of a Cat." /> <!-- New line -->
     </div>
+    <p>Visits: {{ visits }}</p>
 
 {% endblock %}
